--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,8 @@ dependencies {
 
 //    implementation"com.example:my-library:1.0"
     implementation"org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.6.0"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 }
 
